.k8s/02_service.yml
apiVersion: v1
kind: Service
metadata:
  name: augusto-luis
  namespace: m324-csbe-hasenbalg
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
  selector:
    app: augusto-luis
